members are working on search

--- a/frontend/src/assets/scss/main.css
+++ b/frontend/src/assets/scss/main.css
@@ -464,11 +464,16 @@ a:active {
   width: 50px;
   height: 50px;
   border: 3px solid #202428;
-  background-image: url("https://www.gravatar.com/avatar/?d=mp&s=55");
   background-size: cover;
   background-position: center;
   border-radius: 50%;
   cursor: pointer;
+}
+.profileBtn img {
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  background-position: center center;
 }
 
 .filter-container {
