--- a/frontend/src/assets/scss/_profileBtn.scss
+++ b/frontend/src/assets/scss/_profileBtn.scss
@@ -3,9 +3,15 @@
   width: 50px;
   height: 50px;
   border: 3px solid $dark-color;
-  background-image: url('https://www.gravatar.com/avatar/?d=mp&s=55');
+  // background-image: url('https://www.gravatar.com/avatar/?d=mp&s=55');
   background-size: cover; 
   background-position: center; 
   border-radius: 50%;
   cursor: pointer;
+  img{
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    background-position: center center;
+  }
 }
