--- a/frontend/src/assets/scss/main.css
+++ b/frontend/src/assets/scss/main.css
@@ -779,4 +779,8 @@ a:active {
 .blackBg .overlay .overlay-content {
   text-align: center;
   color: white;
+}
+
+.usersearch {
+  font-size: 1.1rem;
 }/*# sourceMappingURL=main.css.map */
