--- a/frontend/src/assets/scss/_userSearch.scss
+++ b/frontend/src/assets/scss/_userSearch.scss
@@ -1,3 +1,13 @@
 .usersearch{
   font-size: 1.1rem;
 }
+.user-info{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  img{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+  }
+}
