--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -1,14 +1,14 @@
-@import 'variables';
 @import 'reset';
-@import 'typography';
+@import './globals/typography';
+@import './globals/variables';
 @import 'container';
 @import 'wrapper';
 @import 'search';
 @import 'movie';
 @import 'navbar';
-@import 'watchList';
+@import './watchlist/filterBar';
+@import './watchlist/watchList';
 @import 'profileBtn';
-@import 'filterBar';
 @import 'signIn';
 @import 'profilePage';
 @import 'scrollBar';
