--- a/frontend/src/assets/scss/_profilePage.scss
+++ b/frontend/src/assets/scss/_profilePage.scss
@@ -53,6 +53,9 @@
     .profile-summary-right{
       display: flex;
       .profile-stats{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
         padding: 5px;
         a{
           display: flex;
