follow box added

--- a/frontend/src/assets/scss/_profilePage.scss
+++ b/frontend/src/assets/scss/_profilePage.scss
@@ -53,6 +53,7 @@
     .profile-summary-right{
       display: flex;
       .profile-stats{
+        cursor: pointer;
         display: flex;
         align-items: center;
         flex-direction: column;
