--- a/frontend/src/assets/scss/_followBox.scss
+++ b/frontend/src/assets/scss/_followBox.scss
@@ -16,14 +16,11 @@
     z-index: 1000;
     display: flex;
     flex-direction: column;
-    // justify-content: center;
-    align-items: center;
     margin: 20px;
     width: calc(100vw - 88px);
     min-width: 260px;
-    max-width: 500px;
-    min-height: 500px;
-    max-height: calc(100% - 40px);
+    max-width: 400px;
+    height: 400px;
     .follow-box-top{
       width: 100%;
       height: 50px;
@@ -43,8 +40,33 @@
       }
     }
     .overlay-content {
-      text-align: center;
       color: white;
+      display: flex;
+      flex-direction: column;
+      overflow-y: scroll;
+        .user-list{
+        display: flex;
+        flex-direction: column;
+        .user-item{
+          display: flex;
+          padding: 8px 16px;
+          background-color: #262626;
+          cursor: pointer;
+          &:hover{
+            background-color: #494949;
+          }
+          img{
+            margin-right: 10px;
+            height: 44px;
+            width: 44px;
+            border-radius: 50%;
+          } 
+          span{
+            display: flex;
+            align-items: center;
+          }
+        }
+      }
     }
   }
   
