each persons watchlist is seen now

--- a/frontend/src/assets/scss/_profilePage.scss
+++ b/frontend/src/assets/scss/_profilePage.scss
@@ -77,16 +77,17 @@
     padding: 0 20px;
     border: 2px solid $md-dark-color;
     border-radius: 10px;
-    ul{
-      display: flex;
-      li{
-        font-size: 1rem;  
-        padding: 12px;
-        cursor: pointer;
-        transition: 0.2s;
-        &:hover{
-          color: $yellow-color;
-        }
+    display: flex;
+    button{
+      background: transparent;
+      font-size: 1rem;  
+      border: none;
+      color: $site-common-white;
+      padding: 12px;
+      cursor: pointer;
+      transition: 0.2s;
+      &:hover{
+        color: $yellow-color;
       }
     }
   }
