each persons watchlist is seen now

--- a/frontend/src/assets/scss/_followBox.scss
+++ b/frontend/src/assets/scss/_followBox.scss
@@ -6,6 +6,7 @@
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.6);
+  z-index: 999;
   .overlay {
     position: fixed;
     top: 50%;
