live follow button click working instantly getting data after clicking

--- a/frontend/src/assets/scss/main.css
+++ b/frontend/src/assets/scss/main.css
@@ -744,6 +744,7 @@ a:active {
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.6);
+  z-index: 999;
 }
 .blackBg .overlay {
   position: fixed;
