--- a/frontend/src/assets/scss/_container.scss
+++ b/frontend/src/assets/scss/_container.scss
@@ -1,10 +1,11 @@
 .container {
-  max-width: 1050px;
+  width: 1050px;
   margin: 0 auto;
   padding: 0 1rem;
 }
 
 
 .container-top{
+  width: 244px;
   background-color: $md-dark-color;
 }
