--- a/frontend/src/assets/scss/_followBox.scss
+++ b/frontend/src/assets/scss/_followBox.scss
@@ -26,18 +26,20 @@
       width: 100%;
       height: 50px;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
       padding: 20px;
       color: #F5F5F5;
       border-bottom: solid 1px $md-dark-color;
       p{
-        font-size: 1.5rem;
-        font-weight: 500;
+        font-size: 1.2rem;
+        font-weight: 400;
       }
       i {
+        position: absolute;
+        right: 10px;
         cursor: pointer;
-        font-size: 2rem;
+        font-size: 1.6rem;
       }
     }
     .overlay-content {
