extreamly huge ui eupdate

--- a/frontend/src/assets/scss/_container.scss
+++ b/frontend/src/assets/scss/_container.scss
@@ -7,5 +7,6 @@
 
 .container-top{
   width: 244px;
-  background-color: $md-dark-color;
+  background-color: $dark-color;
+  border-right: 2px solid $md-dark-color;
 }
