--- a/frontend/src/assets/scss/_search.scss
+++ b/frontend/src/assets/scss/_search.scss
@@ -1,7 +1,7 @@
 .search-container {
   max-width: 1050px;
   margin: 0 auto;
-  padding: 0 1rem;
+  padding: 8px 12px 20px;
   min-height: 80px;
   justify-content: space-between;
   display: flex;
@@ -9,7 +9,8 @@
 }
 
 .logo {
-  padding: 1rem 0;
+  padding: 25px 12px 16px;
+  margin-bottom: 19px;
   p {
     font-size: 1.6rem;
     color: $site-common-white;
