--- a/frontend/src/assets/scss/main.css
+++ b/frontend/src/assets/scss/main.css
@@ -39,7 +39,8 @@ a:active {
 
 .container-top {
   width: 244px;
-  background-color: #383f46;
+  background-color: #202428;
+  border-right: 2px solid #383f46;
 }
 
 .wrapper {
@@ -59,7 +60,7 @@ a:active {
 .search-container {
   max-width: 1050px;
   margin: 0 auto;
-  padding: 0 1rem;
+  padding: 8px 12px 20px;
   min-height: 80px;
   justify-content: space-between;
   display: flex;
@@ -67,7 +68,8 @@ a:active {
 }
 
 .logo {
-  padding: 1rem 0;
+  padding: 25px 12px 16px;
+  margin-bottom: 19px;
 }
 .logo p {
   font-size: 1.6rem;
@@ -273,17 +275,23 @@ a:active {
 .navBar ul {
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
 .navBar ul li {
-  background-color: #202428;
-  padding: 0.6rem;
-  border-radius: 8px;
   display: flex;
 }
 .navBar ul li a {
+  margin: 4px 0;
+  padding: 12px;
+  border-radius: 8px;
   font-size: 1.1rem;
+  align-items: center;
   color: #DDDDDD;
+  display: flex;
+  gap: 9px;
+}
+.navBar ul li a i {
+  font-size: 1.3rem;
+  width: 30px;
 }
 
 .filter-container {
@@ -508,17 +516,14 @@ a:active {
 .profileBtn {
   display: flex;
   align-items: center;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   border: 2px solid #202428;
   background-size: cover;
   background-position: center;
   border-radius: 50%;
   cursor: pointer;
   gap: 10px;
-}
-.profileBtn p {
-  color: #DDDDDD;
 }
 .profileBtn img {
   border-radius: 50%;
